<resources>
    <string name="app_name">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="datetxt">datetxt</string>
    <string name="timetxt">timetxt</string>
    <string name="free_tiket">ticket</string>
    <string name="capture">Capture</string>
</resources>
