<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/activity_map"
    tools:context=".CameraActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fst_layout">

      <!--<ImageView-->
          <!--android:layout_width="300dp"-->
          <!--android:layout_height="300dp"-->
          <!--android:background="@drawable/border"-->
          <!--android:layout_marginLeft="50dp"-->
          <!--android:scaleType="fitCenter"-->
          <!--android:layout_marginRight="50dp"-->
          <!--android:layout_marginTop="10dp"-->
          <!--android:id="@+id/iv"/>-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/iv"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/border"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/scnd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fst_layout">

        <ImageView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginRight="180dp"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:text="@string/email"
            android:layout_marginTop="60dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_marginLeft="190dp"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email_txt"
            android:layout_marginLeft="190dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_password"
            android:layout_marginLeft="190dp"
            android:hint="@string/password" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_password_txt"
            android:layout_marginLeft="190dp"
            android:text="@string/location"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_location"
            android:layout_marginLeft="190dp"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/tv_lat_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_location"
            android:layout_marginLeft="256dp"
            android:hint="@string/latitude" />

        <TextView
            android:id="@+id/tv_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lat"
            android:layout_marginLeft="190dp"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/tv_long_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lat"
            android:layout_marginLeft="270dp"
            android:hint="@string/longitude" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_long"
            android:layout_marginLeft="190dp"
            android:text="@string/time"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_date"
            android:layout_marginLeft="190dp"
            android:hint="@string/datetxt"
            android:textSize="15dp" />

    </RelativeLayout>


</RelativeLayout>